test_suite/tests/ui/remote/wrong_getter.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_getter.rs:15:10
   |
15 | #[derive(Serialize)]
   |          ^^^^^^^^^ expected `u8`, found `u16`
   |
   = note: expected reference `&u8`
              found reference `&u16`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
